<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".reg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="63dp"
        android:text="@string/reg"
        android:textColor="#147"
        android:textColorHighlight="#fff"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:paddingTop="60dp"
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:id="@+id/editText3"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/mail"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#efefef"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="305dp" />


        <EditText

            android:id="@+id/u_name"
            android:layout_width="250dp"
            android:layout_height="40dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/uid"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/uid"

            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#efefef"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="48dp" />

        <EditText

            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="40dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/pwd"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#efefef"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="374dp" />

        <EditText

            android:id="@+id/editText4"
            android:layout_width="250dp"
            android:layout_height="40dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/pwd"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/rpwd"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#efefef"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="435dp" />


    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="96dp"
        android:text="@string/login"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView3"
        android:layout_width="111dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/shield" />


</android.support.constraint.ConstraintLayout>