<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog"
    android:layout_height="wrap_content">


            <TextView
                android:background="@drawable/actionbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/l_title"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="170dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:text="@string/pwd"
                        android:layout_margin="23dp"
                        android:textSize="18sp"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textAlignment="center"
                        android:layout_width="270dp"
                        android:background="@drawable/input"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:id="@+id/c_pass"
                        android:autofillHints="@string/pwd"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor,UnusedAttribute" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/lock"
                    android:textSize="15sp"
                    android:textColor="#fff"
                    android:id="@+id/l_btn"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/cnl"
                    android:textSize="15sp"
                    android:textColor="#fff"
                    android:id="@+id/l_cnl"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>


</LinearLayout>